// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`TouchpointsListCard should render 1`] = `
<div
  class="analytics-touchpoints-list"
>
  <div
    class="table-responsive table-root flex-grow-1 table-hover"
  >
    <table
      class="table table-autofit table-hover table-heading-nowrap table-nowrap"
    >
      <thead>
        <tr
          class=""
        >
          <th
            class="table-head-title"
          >
            Page Name
          </th>
          <th
            class="table-head-title"
          >
            Canonical URL
          </th>
        </tr>
      </thead>
    </table>
  </div>
</div>
`;

exports[`TouchpointsListCard should render with items 1`] = `
<div
  class="analytics-touchpoints-list"
>
  <div
    class="table-responsive table-root flex-grow-1 table-hover"
  >
    <table
      class="table table-autofit table-hover table-heading-nowrap table-nowrap"
    >
      <thead>
        <tr
          class=""
        >
          <th
            class="table-head-title"
          >
            Page Name
          </th>
          <th
            class="table-head-title"
          >
            Canonical URL
          </th>
        </tr>
      </thead>
      <tbody
        class="table-hover"
      >
        <tr
          class=""
        >
          <td
            class="table-cell-expand"
          >
            <a
              class="font-weight-semibold text-truncate-inline text-dark"
              href="/workspace/2000/456/sites/pages/overview/https%3A%2F%2Fwww.liferay.com%2Fdigital-experience-platform/https%3A%2F%2Fwww.liferay.com%2Fdigital-experience-platform?rangeKey=30"
            >
              <span
                class="text-truncate"
                data-tooltip="false"
                title=""
              >
                https://www.liferay.com/digital-experience-platform
              </span>
            </a>
          </td>
          <td
            class="table-cell-expand"
          >
            <a
              class="text-secondary text-truncate-inline"
              href="/workspace/2000/456/sites/pages/overview/https%3A%2F%2Fwww.liferay.com%2Fdigital-experience-platform/https%3A%2F%2Fwww.liferay.com%2Fdigital-experience-platform?rangeKey=30"
            >
              <span
                class="text-truncate"
                data-tooltip="false"
                title=""
              >
                https://www.liferay.com/digital-experience-platform
              </span>
            </a>
          </td>
        </tr>
      </tbody>
      <tbody
        class="table-hover"
      >
        <tr
          class=""
        >
          <td
            class="table-cell-expand"
          >
            <a
              class="font-weight-semibold text-truncate-inline text-dark"
              href="/workspace/2000/456/sites/pages/overview/https%3A%2F%2Fwww.liferay.com%2Fdigital-experience-platform/https%3A%2F%2Fwww.liferay.com%2Fdigital-experience-platform?rangeKey=30"
            >
              <span
                class="text-truncate"
                data-tooltip="false"
                title=""
              >
                https://www.liferay.com/digital-experience-platform
              </span>
            </a>
          </td>
          <td
            class="table-cell-expand"
          >
            <a
              class="text-secondary text-truncate-inline"
              href="/workspace/2000/456/sites/pages/overview/https%3A%2F%2Fwww.liferay.com%2Fdigital-experience-platform/https%3A%2F%2Fwww.liferay.com%2Fdigital-experience-platform?rangeKey=30"
            >
              <span
                class="text-truncate"
                data-tooltip="false"
                title=""
              >
                https://www.liferay.com/digital-experience-platform
              </span>
            </a>
          </td>
        </tr>
      </tbody>
      <tbody
        class="table-hover"
      >
        <tr
          class=""
        >
          <td
            class="table-cell-expand"
          >
            <a
              class="font-weight-semibold text-truncate-inline text-dark"
              href="/workspace/2000/456/sites/pages/overview/https%3A%2F%2Fwww.liferay.com%2Fdigital-experience-platform/https%3A%2F%2Fwww.liferay.com%2Fdigital-experience-platform?rangeKey=30"
            >
              <span
                class="text-truncate"
                data-tooltip="false"
                title=""
              >
                https://www.liferay.com/digital-experience-platform
              </span>
            </a>
          </td>
          <td
            class="table-cell-expand"
          >
            <a
              class="text-secondary text-truncate-inline"
              href="/workspace/2000/456/sites/pages/overview/https%3A%2F%2Fwww.liferay.com%2Fdigital-experience-platform/https%3A%2F%2Fwww.liferay.com%2Fdigital-experience-platform?rangeKey=30"
            >
              <span
                class="text-truncate"
                data-tooltip="false"
                title=""
              >
                https://www.liferay.com/digital-experience-platform
              </span>
            </a>
          </td>
        </tr>
      </tbody>
    </table>
  </div>
</div>
`;
